# ai_patent_impact

./: .gitignore  README.md
data/: LIMITATIONS.md  README.md  _make_dummy_features.py  analyze_features.py  download_appxml_zips_from_manifest.py  features_README.md  findings.md  out.txt  parse_zips_to_features.py  requirements.txt
upsto-parse/: README.md  pyproject.toml  requirements.txt
upsto-parse/parse_uspto_xml/: __init__.py  parse_patent.py  version.py
upsto-parse/parse_uspto_xml/utils/: db_interface.py
